--- a/Visualization_and_Analysis.ipynb
+++ b/Visualization_and_Analysis.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Visualization and Analysis",
-      "provenance": [],
-      "authorship_tag": "ABX9TyM7flffUvN04yiOd6vFOuJ+",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/katerinneramos/data/blob/main/Visualization_and_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -51,7 +39,7 @@
       "metadata": {
         "id": "ggF_WiwVMZMY"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +60,7 @@
       "metadata": {
         "id": "A-jMKOXcMrXC"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +76,7 @@
         "id": "MRt6c6buMvvJ",
         "outputId": "c20bad16-7846-4634-a009-cc854842079b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +356,7 @@
       "metadata": {
         "id": "fU_Jb2HANHUB"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +371,7 @@
         "id": "pZKDPgzxM00C",
         "outputId": "4c1a8765-e6d5-428a-b334-ced00c8a7bc0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +403,7 @@
         "id": "Vlxk8bb6Nexv",
         "outputId": "633163c1-c3ce-4a9c-91ca-fa0fa74bcaf2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +444,7 @@
         "id": "K8fGL-qDNjzU",
         "outputId": "279dcb80-800c-4f7d-c41e-23ddec1744f6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +604,7 @@
         "id": "jHWl5lM3NVeR",
         "outputId": "5abe2ea2-61f8-4484-9c3b-300eeeb6d916"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -661,7 +649,7 @@
         "id": "CBPH_NYaNpcs",
         "outputId": "07abd34c-122d-471b-cfa0-c11e6480db03"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -699,7 +687,7 @@
         "id": "weU2g07_Nzds",
         "outputId": "7a1421bf-0c50-445e-fca9-04b29f13a474"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "8gtsYp_wLiny"
       },
@@ -900,7 +888,7 @@
       "metadata": {
         "id": "v1iqcxO8Ltzo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -925,7 +913,7 @@
       "metadata": {
         "id": "dPjV-BtnL923"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +932,7 @@
         "id": "QC9r2-nfMJMK",
         "outputId": "dce14066-0e45-4b87-c3b3-c3113af5d764"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
